<resources>
    <string name="app_name">My Grocery Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category">Category</string>
    <string name="name">Name</string>
    <string name="demo_image">demo image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="welcome_to_my_grocery_store">Welcome To My Grocery Store</string>
    <string name="explore_us">Explore Us</string>
    <string name="we_are_happy_to_have_you_get_ready_to_buy_fresh_and_freeze_grocery_and_anything_you_want">We Are Happy To Have You! Get Ready To Buy Fresh and Freeze, Grocery, and Anything You Want.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="new_products">New Products</string>
    <string name="my_orders">My Orders</string>
    <string name="my_carts">My Carts</string>
    <string name="search_your_item_here">Search Your Item Here...</string>
    <string name="popular_products">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="explore_products">Explore Products</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="description">Description</string>
    <string name="_5_0">5.0</string>
    <string name="discount_20_off">Discount 20% Off</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="ratingbar_image">Ratingbar Image</string>
    <string name="recommended_product_image">Recommended Product Image</string>
    <string name="number">Phone Number</string>
    <string name="address">Your Address</string>
    <string name="update">Update</string>
    <string name="discount">Discount: </string>
    <string name="_20_off">20% OFF</string>
    <string name="category_product_image">Category Product Image</string>
    <string name="about_product">About Product</string>
    <string name="new_product_image">New Product Image</string>
    <string name="sorry_there_is_no_new_products_yet">Sorry There is No New Products Yet</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="you_have_not_purchased_anything_yet">You Have Not Purchased Anything Yet</string>
    <string name="price">Price $</string>
    <string name="_30">30</string>
    <string name="view_all_products">View All Products</string>
    <string name="product_detail_image">Product Detail Image</string>
    <string name="price_30_kg">Price: 30/kg</string>
    <string name="add_item_image">Add Item Image</string>
    <string name="_1">1</string>
    <string name="remove_item_image">Remove Item Image</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="total_price_0">Total Price: $0</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_price">Product Price</string>
    <string name="current_date">Current Date</string>
    <string name="current_time">Current Time</string>
    <string name="total_price">Total Price</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="your_order_has_been_placed">Your Order Has Been Placed</string>
    <string name="thank_you_for_purchasing_our_product_n_please_come_again">Thank You For Purchasing Our Product \n Please Come Again</string>
</resources>