<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.mygrocerystore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.project.mygrocerystore.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.project.mygrocerystore.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.project.mygrocerystore.ui.MyCartsFragment"
        android:label="@string/my_carts"
        tools:layout="@layout/fragment_my_carts" />

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.project.mygrocerystore.ui.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.project.mygrocerystore.ui.NewProductsFragment"
        android:label="@string/new_products"
        tools:layout="@layout/fragment_new_products" />

    <fragment
        android:id="@+id/nav_offers"
        android:name="com.project.mygrocerystore.ui.OffersFragment"
        android:label="@string/offers"
        tools:layout="@layout/fragment_offers" />

</navigation>