<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/view_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/category_product_image"
            android:scaleType="centerCrop"
            android:src="@drawable/fruits" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_30"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="-5dp"
                    android:src="@drawable/ratingbar"
                    android:contentDescription="@string/ratingbar_image" />

                <TextView
                    android:id="@+id/view_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:text="@string/_5_0" />

            </LinearLayout>


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/about_product"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>