<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/rec_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/offers3"
            android:contentDescription="@string/recommended_product_image" />

        <TextView
            android:id="@+id/rec_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rec_dec"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="-5dp"
                android:src="@drawable/ratingbar"
                android:contentDescription="@string/ratingbar_image" />

            <TextView
                android:id="@+id/rec_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="@string/_5_0" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>