<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cat_nav_img"
            android:layout_width="120dp"
            android:layout_height="125dp"
            android:contentDescription="@string/category_product_image"
            android:scaleType="centerInside"
            android:src="@drawable/fruits" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_cat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textColor="@color/purple_700"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_item"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/add_item_image"
                    android:src="@drawable/add_circle" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/remove_item"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/remove_item_image"
                    android:src="@drawable/circle" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buyNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg_detailed"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>