<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/detailed_img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/product_detail_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/detailed_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/price_30_kg"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img" />

    <ImageView
        android:id="@+id/detailed_ratingBar"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/ratingbar_image"
        android:src="@drawable/ratingbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_img" />

    <TextView
        android:id="@+id/detailed_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/_5_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/detailed_ratingBar"
        app:layout_constraintTop_toBottomOf="@id/detailed_img" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_price" />

    <TextView
        android:id="@+id/detailed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#C5FDAD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/add_item"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/add_item_image"
        android:src="@drawable/add_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="7dp"
        android:src="@drawable/add_circle"
        android:text="@string/_1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_item"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <ImageView
        android:id="@+id/remove_item"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:contentDescription="@string/remove_item_image"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_to_cart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_bg_detailed"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>