<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/pop_img"
            android:layout_width="280dp"
            android:layout_height="190dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/offers3"
            app:riv_corner_radius="14dp" />

        <TextView
            android:id="@+id/pop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_products"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pop_des"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="-5dp"
                android:src="@drawable/ratingbar" />

            <TextView
                android:id="@+id/pop_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:text="@string/_5_0" />

            <TextView
                android:id="@+id/pop_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="end"
                android:text="@string/discount_20_off"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>