<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/demo_image"
        android:src="@mipmap/regbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="13dp"
        android:textColor="#888887"
        android:textColorHint="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_img"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/registerEmailET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/account"
        android:drawablePadding="13dp"
        android:elevation="3dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        android:textColor="#888887"
        android:textColorHint="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNameET"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/registerPasswordET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/keylog"
        android:drawablePadding="13dp"
        android:elevation="3dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColor="#888887"
        android:textColorHint="#888887"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailET"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordET" />

    <TextView
        android:id="@+id/alreadyHAATV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/already_have_an_account"
        android:textColor="#888887"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/signInTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/alreadyHAATV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/alreadyHAATV"
        app:layout_constraintTop_toTopOf="@+id/alreadyHAATV"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInTV"
        app:layout_constraintVertical_bias="0.1"
        android:scaleX="0.5"
        android:scaleY="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>